# projeto-finops

./: .dockerignore  .gitignore  .python-version  Dockerfile  README.md  costAnalysis-Dec 18, 2025 (1).csv  cost_last_6_months_by_service.csv  docker-compose.yml  main.py  projeto.md  pyproject.toml  reports_usage-csv_0001000002596535.csv  requirements.txt  teste-mais.py
.streamlit/: config.toml
app/: config.py  main.py
app/data/: __init__.py  loaders.py  models.py  normalize.py  repositories.py
app/infra/: __init__.py  cache.py  llm_client.py  logging_config.py
app/models/: cost_model.py  csv_loader.py  db.py
app/services/: __init__.py  analytics_service.py  anomaly_service.py  chat_service.py  date_window.py  forecast_service.py  insights_service.py  multicloud_analytics.py  recommendation_service.py
app/ui/: __init__.py  anomaly_panel.py  charts.py  chat_panel.py  filters_sidebar.py  forecast_panel.py  insights_panel.py  kpi_cards.py  layout.py  multicloud_dashboard.py  recommendation_panel.py
data/: finops.db
deploy/eks/: README.md  configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
scripts/: smoke_kpis.py  smoke_test.py
tests/: costs (5).csv
